# nb-lang

./: flake.nix  nb-lang.cabal
.github/workflows/: build.yml
nb-lang/: Main.hs
src/: Lang.hs
src/Lang/: Compat.hs  Context.hs  Domain.hs  Existential.hs  HTTP.hs  Import.hs  Infer.hs  Input.hs  Interpret.hs  Lexer.hs  Location.hs  Monotype.hs  Normalize.hs  Parser.hs  Pretty.hs  REPL.hs  Server.hs  Syntax.hs  TH.hs  Type.hs  Value.hs  Width.hs
