cabal-version:       >=1.10
name:                nb-lang
version:             1.0.0
license-file:        LICENSE
author:              Gabriella Gonzalez, Greg Hale
maintainer:          greg.hale@neuronbench.com
build-type:          Simple

library
  hs-source-dirs:      src

  build-depends:       base
                     , aeson
                     , Earley
                     , containers
                     , filepath
                     , generic-lens
                     , insert-ordered-containers
                     , lens
                     , megaparsec
                     , modern-uri
                     , mtl
                     , parser-combinators
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , safe-exceptions
                     , scientific
                     , string-interpolate
                     , template-haskell
                     , text >= 1.2.4.0
                     , unordered-containers

  exposed-modules:     Lang.Context
                     , Lang.Domain
                     , Lang.Existential
                     , Lang.Input
                     , Lang.Import
                     , Lang.Interpret
                     , Lang.Infer
                     , Lang.Lexer
                     , Lang.Location
                     , Lang.Monotype
                     , Lang.Normalize
                     , Lang.Parser
                     , Lang.Pretty
                     , Lang.Server
                     , Lang.Syntax
                     , Lang.HTTP
                     , Lang.TH
                     , Lang.Type
                     , Lang.Value
                     , Lang.Width

  other-modules:       Lang.Compat

  default-language:    Haskell2010

  ghc-options:         -Wall

  if impl(ghcjs)
    hs-source-dirs:    ghcjs
    build-depends:     ghcjs-base
                     , ghcjs-fetch
  else
    hs-source-dirs:    ghc
    build-depends:     ansi-terminal
                     , bytestring
                     , haskeline
                     , http-client
                     , http-client-tls
                     , http-types
                     , optparse-applicative
                     , repline
                     , terminal-size
                     , wai
                     , warp
                     , wai-cors
                     , wai-app-static
    exposed-modules:   Lang
                     , Lang.REPL

executable nb-lang
  main-is:             Main.hs

  build-depends:       base
                     , nb-lang

  hs-source-dirs:      nb-lang

  default-language:    Haskell2010
  if impl(ghcjs)
    buildable:         False


test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  build-depends:       base
                     , directory
                     , filepath
                     , nb-lang
                     , mtl
                     , prettyprinter
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text

  hs-source-dirs:      tasty

  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  build-depends:       base
                     , doctest

  hs-source-dirs:      doctest

  default-language:    Haskell2010

  ghc-options:         -Wall
